--- a/index.html
+++ b/index.html
@@ -2120,6 +2120,33 @@ function showInventory() {
 
   modal.style.display = 'flex';
 }
+function goToBattlePage() {
+  const collected = JSON.parse(localStorage.getItem('collectedCards')) || [];
+  if (collected.length < 2) {
+    alert("You need at least 2 cards to start a battle!");
+    return;
+  }
+
+  // Pokémon-style fade out
+  const fade = document.createElement("div");
+  fade.style.position = "fixed";
+  fade.style.top = 0;
+  fade.style.left = 0;
+  fade.style.width = "100%";
+  fade.style.height = "100%";
+  fade.style.background = "#000";
+  fade.style.zIndex = 9999;
+  fade.style.opacity = 0;
+  fade.style.transition = "opacity 0.8s";
+  document.body.appendChild(fade);
+
+  requestAnimationFrame(() => {
+    fade.style.opacity = 1;
+    setTimeout(() => {
+      window.location.href = "battle.html";
+    }, 800);
+  });
+}
 
 window.addEventListener('DOMContentLoaded', () => {
   const wallet = document.getElementById('toadWallet');
@@ -2189,6 +2216,13 @@ window.addEventListener('DOMContentLoaded', () => {
     <div id="cardInventory" class="card-inventory"></div>
     <button id="resetWallet" class="reset-wallet">Reset Wallet</button>
   </div>
+</div>
+<div id="fightBtn" 
+     style="background:#fff; border:2px solid #000; 
+            padding:10px 20px; font-family:'Press Start 2P','DotGothic16',monospace; 
+            cursor:pointer; text-align:center; width:fit-content; margin:20px auto;"
+     onclick="goToBattlePage()">
+  FIGHT
 </div>
 </body>
 </html>
