--- a/battle.html
+++ b/battle.html
@@ -264,7 +264,7 @@
     el.style.cursor='default';
     
     const img = document.createElement('img'); 
-    img.src = 'images/cards/card back.jpeg';
+    img.src = 'images/card back.jpg';
     img.alt = 'Hidden Card';
     img.style.width = '100%';
     img.style.height = '100%';
