Fix image source path for card back
Corrected image source file extension from .jpeg to .jpg.

--- a/battle.html
+++ b/battle.html
@@ -507,7 +507,7 @@ const cardDatabase = {
     el.style.cursor='default';
     
     const img = document.createElement('img'); 
-    img.src = 'images/card back.jpeg';  // Fixed path - removed /cards
+    img.src = 'images/card back.jpg';  // Fixed path - removed /cards
     img.alt = 'Hidden Card';
     img.style.width = '100%';
     img.style.height = '100%';
