--- a/battle.html
+++ b/battle.html
@@ -85,7 +85,7 @@
   }
   
   /* damage popup */
-  .dmg-pop{position:absolute;font-size:16px;font-weight:700;color:#ff4444;pointer-events:none;animation:damageFloat 1000ms ease-out forwards;z-index:200;text-shadow:2px 2px 0 #000}
+  .dmg-pop{position:absolute;font-size:16px,font-weight:700;color:#ff4444;pointer-events:none;animation:damageFloat 1000ms ease-out forwards;z-index:200;text-shadow:2px 2px 0 #000}
   @keyframes damageFloat{
     0%{transform:translateY(0) translateX(-50%) scale(0.8);opacity:0}
     20%{transform:translateY(-10px) translateX(-50%) scale(1.2);opacity:1}
@@ -646,7 +646,7 @@ const cardDatabase = {
       
       btn.textContent = buttonText;
       btn.title = attack.description || '';
-      
+
       btn.addEventListener('click', () => {
         if(!isDisabled) performSpecialAttack(idx, attack);
       });
